# SignalSlotLib

./: CMakeLists.txt  CMakePresets.json  Signal.h  SignalSlotLib.cpp  SignalSlotLib.h  Slot.h  TaskQueue.h
src/: CMakeLists.txt  Signal.h  TaskQueue.h
test/: CMakeLists.txt  SignalContainer.cpp  SignalContainer.h  Test_DirectConnect.cpp  Test_Disconnect.cpp  Test_QueueConnect.cpp
